Restructuring and added new extension to prevent execution from failing in the case of no permutations